# chess-llm-reference

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
chess_llm/: __init__.py  analysis.py  api.py  cli.py  config.py  db.py  engine.py  game.py  llm.py  logging_setup.py  repository.py  tools.py
tests/: conftest.py  test_engine.py  test_persistence.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/games/[id]/: page.tsx
web/components/: Board.tsx
web/lib/: api.ts
