[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chess-llm"
version = "0.1.0"
description = "Play chess against an LLM, with games and moves persisted for rewind and analysis."
requires-python = ">=3.11"
dependencies = [
    "chess>=1.11",
    "SQLAlchemy>=2.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
# Hosted Postgres driver — `pip install -e ".[postgres]"`. SQLite needs nothing.
postgres = ["psycopg[binary]>=3.1"]

[project.scripts]
chess-llm = "chess_llm.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["chess_llm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length is owned by `ruff format`, not the linter
